--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      TZ: Asia/Dhaka
+      TZ: 'Asia/Dhaka'
     env_file:
       - ./.env
     command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci','--default-time-zone=+06:00']
     volumes:
-      - ./config/mysql-8:/docker-entrypoint-initdb.d
       - ./data/mysql-8:/var/lib/mysql
+      - ./config/mysql-8:/docker-entrypoint-initdb.d
     deploy:
       resources:
         limits:
@@ -38,16 +38,26 @@ services:
   #     # - ./my-init.sql:/docker-entrypoint-initdb.d/my-init.sql
   #     - ./data/percona-8:/var/lib/mysql
 
-  # postgres-15:
-  #   image: postgres:15
-  #   restart: unless-stopped
-  #   environment:
-  #     POSTGRES_PASSWORD: ${DB_PASSWORD}
-  #     POSTGRES_USER: ${DB_USER}
-  #     POSTGRES_DB: ${DB_NAME}
-  #   volumes:
-  #     - ./data/postgres-15:/var/lib/postgresql/data
-  #     # - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
+  postgres-15:
+    image: postgres:15
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
+      TZ: 'Asia/Dhaka'
+      PGTZ: 'GMT+6'
+    volumes:
+      - ./data/postgres-15:/var/lib/postgresql/data
+      - ./config/postgres-15:/docker-entrypoint-initdb.d
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1GB
+        reservations:
+          cpus: '0.25'
+          memory: 200M
 
   # mssql-2022:
   #   image: mcr.microsoft.com/azure-sql-edge
