Added expose port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       TZ: 'Asia/Dhaka'
     env_file:
       - ./.env
+    ports:
+      - ${MYSQL_PORT:-3306}:3306
     command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci','--default-time-zone=+06:00']
     volumes:
       - ./data/mysql-8:/var/lib/mysql
@@ -36,6 +38,8 @@ services:
       TZ: 'Asia/Dhaka'
     env_file:
       - ./.env
+    ports:
+      - ${PERCONA_PORT:-3307}:3306
     volumes:
       - ./data/percona-8:/var/lib/mysql
       - ./config/percona-8:/docker-entrypoint-initdb.d
@@ -57,6 +61,10 @@ services:
       POSTGRES_DB: ${DB_NAME}
       TZ: 'Asia/Dhaka'
       PGTZ: 'GMT+6'
+    env_file:
+      - ./.env
+    ports:
+      - ${POSTGRES_PORT:-5432}:5432
     volumes:
       - ./data/postgres-15:/var/lib/postgresql/data
       - ./config/postgres-15:/docker-entrypoint-initdb.d
@@ -72,8 +80,6 @@ services:
   mssql-2022:
     image: mcr.microsoft.com/azure-sql-edge
     command: /opt/mssql/bin/sqlservr
-    ports:
-      - 1433:1433
     cap_add:
       - SYS_PTRACE
     restart: unless-stopped
@@ -84,6 +90,8 @@ services:
       TZ: 'Asia/Dhaka'
     env_file:
       - ./.env
+    ports:
+      - ${MSSQL_PORT:-1433}:1433
     stdin_open: true
     volumes:
       - ./data/mssql-2022:/var/opt/mssql
